cli/tests/testdata/compat/test_runner/top_level_fail_esm.out
Uncaught error from ./compat/test_runner/top_level_fail_esm.mjs FAILED

failures:

[./compat/test_runner/top_level_fail_esm.mjs]
error: AssertionError: Values are not strictly equal:


    [Diff] Actual / Expected


-   10
+   20

    Error.captureStackTrace(this, stackStartFn || stackStartFunction);
          ^
    at [WILDCARD]
This error was not caught from a test and caused the test runner to fail on the referenced module.
It most likely originated from a dangling promise, event/timeout handler or top-level code.

failures:

[./compat/test_runner/top_level_fail_esm.mjs]

test result: FAILED. 0 passed; 1 failed; 0 ignored; 0 measured; 0 filtered out ([WILDCARD])

error: Test failed
